The freshness stamp records a digest of compiler options and the JDK
The stat-only fast path in front of the action cache compared the source
set, the classpath set, --release and mtimes, and nothing else. Every
other compile input — [javac] args and plugins, [build] lint/debug,
--profile args, plugin-contributed args, the JDK, kotlinc args and
[[kotlin-plugins]], ksp-options — was hashed only into the action key,
which the stamp stored but never compared and which is never computed
when the stamp says fresh. Editing any of them with untouched sources
left compile-java, compile-kotlin, compile-groovy and the KSP round
"up to date" and packaged the old classes.

Each stamp now carries a DIGEST line and isFresh compares it. compile-java
derives it from the very CompileRequest the action key hashes, the Kotlin
lane from the fetch-free KotlinConfig it compiles with, the Groovy lane
and the KSP round from their args and toolchain; the compile publishes
the digest it checked so write-stamp records the same one, and the
explain forecast derives compile-main's digest from the same request as
the build. A stamp without the line matches only a producer with no
options, so every existing stamp reads stale exactly once.

ModuleForecast changes only in compileMain: the request is built before
the stamp gate and its digest passed in.

JK-3095